--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,11 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn clean test
+      - run: mvn package
+      
+      - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
+      # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: target/surefire-reports
+          
+      - store_artifacts:
+          path: target/semester4fun4backend-0.0.1-SNAPSHOT.jar
