--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,11 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
@@ -181,6 +185,7 @@
             <version>5.4.5.Final</version>
         </dependency>
     </dependencies>
+
 
 
 </project>
